# jsbsimedit

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  CONTRIBUTORS.txt  CSE3310ASS2.txt  ExternalForce  Makefile  PropulsionDesign.tar  README.md  RequirementsSpecificationGroundReactions.xlsx  compile_schemas.bat  flightControl.xml  jsbsimedit.code-workspace  mainWindow.xml  properties.xml
.github/workflows/: build_cmake_multi.yml
Systems/: ChannelCanvas.hpp  PIDComponent.cpp  XMLParser.hpp
output/: main
reference/JSBSimCommander/: EngineMgr.ini  f16.xml
requirements/nonFunctional/: presentation.pptx
src/: BuoyantForces.sublime-workspace  examplewindow.cpp  examplewindow.h  main.c  main.cpp
src/Aerodynamics/: AeroDynamicsSubsystem.cpp  AeroDynamicsSubsystem.hpp  AerodynamicsData.cpp  AerodynamicsData.hpp  AerodynamicsNode.cpp  AerodynamicsNode.hpp  AerodynamicsWidget.cpp  AerodynamicsWidget.hpp  AxisMenu.cpp  FunctionMenu.cpp  GraphArea.cpp  GraphArea.hpp  HierarchyPanel.cpp  HierarchyPanel.hpp  MenuPanel.cpp  MenuPanel.hpp  NewPropertyPopup.cpp  NewPropertyPopup.hpp  PropertyMenu.cpp  TableMenu.cpp  TableMenu.hpp  ValueMenu.cpp
src/Application/: Application.cpp  Application.hpp  application.cpp  application.h  appprefs.cpp  appprefs.h  appwindow.cpp  appwindow.h  exampleappwindow.cpp  exampleappwindow.h  main.cpp
src/BuoyantForces/: Ballonet.cpp  Ballonet.hpp  BuoyantForces.cpp  BuoyantForces.hpp  BuoyantForcesSubsystem.cpp  BuoyantForcesSubsystem.hpp  Component.cpp  Component.hpp  Components.cpp  Components.hpp  GasCell.cpp  GasCell.hpp  MathFunction.cpp  MathFunction.hpp  MathFunctions.hpp  buoyantForces.cpp  buoyantForces.hpp
src/DragDropUI/: ChannelCanvas.hpp  ComponentTypeEnum.hpp  DestinationComponent.hpp  FilterComponent.cpp  FilterComponent.hpp  GainComponent.hpp  IDrawable.hpp  PIDComponent.hpp  SensorComponent.cpp  SummerComponent.cpp  SwitchComponent.hpp
src/ExternalReactions/: ExternalForce.cpp  ExternalForce.hpp  ExternalReactionSubsystem.cpp  ExternalReactionSubsystem.hpp  ExternalReactionsSubsystem.cpp  ExternalReactionsSubsystem.hpp
src/GUI/: Channel.cpp  Channel.hpp  ChannelCanvas.cpp  ChannelCanvas.hpp  ClickBox.cpp  ClickBox.hpp  ComponentSprite.cpp  ComponentSprite.hpp  ComponentTypeEnum.hpp  DeadbandComponent.cpp  DeadbandComponent.hpp  DestinationComponent.cpp  DestinationComponent.hpp  ExampleWindow.cpp  ExampleWindow.hpp  FilterComponent.hpp  FlightControlDemo.cpp  FlightControlDemo.hpp  GainComponent.cpp  GainComponent.hpp  IComponentCommon.cpp  IComponentCommon.hpp  IDrawable.hpp  KinematicsComponent.cpp  KinematicsComponent.hpp  PIDComponent.cpp  PIDComponent.hpp  SensorComponent.cpp  SensorComponent.hpp  SourceComponent.cpp  SourceComponent.hpp  SummerComponent.cpp  SummerComponent.hpp  SwitchComponent.cpp
src/GeneralInformation/: Aircraft.cpp  Aircraft.h  Aircraft.hpp  Config.cpp  Config.h  Config.hpp  FileMetadata.cpp  FileMetadata.h  FileMetadata.hpp  GeneralInformationSubsystem.cpp  GeneralInformationSubsystem.hpp  References.cpp  References.h  References.hpp  User.cpp  User.h  User.hpp  Validation.cpp  Validation.h  Validation.hpp
src/GroundReactions/: BrakeGroup.cpp  BrakeGroup.hpp  Contact.cpp  Contact.hpp  DampingCoefficient.cpp  DampingCoefficient.hpp  ForceLagFilter.cpp  ForceLagFilter.hpp  GroundReactions.cpp  GroundReactions.hpp  GroundReactionsSubsystem.cpp  GroundReactionsSubsystem.hpp  Location.cpp  Location.hpp  MaxSteer.cpp  MaxSteer.hpp  RelaxationVelocity.cpp  RelaxationVelocity.hpp  SpringCoefficient.cpp  SpringCoefficient.hpp
src/InputOutput/: FileHandler.cpp  FileHandler.h  FileHandler.hpp  IOSubSystem.cpp  IOSubSystem.hpp  MainWindow.cpp  MainWindow.hpp  PopUpWindow.cpp  PopUpWindow.h  PopUpWindow.hpp
src/METRICS/: metrics.cpp  metrics.h
src/MainWindow/: ExampleTab.cpp  ExampleTab.hpp  ExampleWindow.cpp  ExampleWindow.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp
src/MassBalance/: Emptymass.cpp  Emptymass.hpp  Location.cpp  Location.hpp  MassBalanceSubsystem.cpp  MassBalanceSubsystem.hpp  MomentOfInertia.cpp  MomentOfInertia.hpp  MomentOfInteria.h  MomentOfInteria.hpp  PointMassDialogue.cpp  PointMassDialogue.hpp  Pointmass.cpp  Pointmass.hpp
src/Metrics/: Data_Unit.cpp  Data_Unit.hpp  Metrics.cpp  Metrics.h  Metrics.hpp  MetricsSubsystem.cpp  MetricsSubsystem.hpp  Unit.cpp  Unit.hpp  Vertex_Unit.cpp  Vertex_Unit.hpp  f16.xml
src/Propulsion/: DialogBox.cpp  Engine.cpp  Engine.hpp  EngineSelectorWindow.cpp  EngineSelectorWindow.hpp  EngineThruster.cpp  EngineThrusterDialog.cpp  EngineThrusterDialog.hpp  MainWindow.cpp  MainWindow.hpp  PropulsionManager.cpp  PropulsionManager.hpp  PropulsionSubsystem.cpp  PropulsionSubsystem.hpp  Semester Project.vcxproj  Semester Project.vcxproj.filters  Tank.cpp  Tank.hpp  TankDialog.cpp  TankDialog.hpp  Thruster.cpp  Thruster.hpp  main.cpp
src/Systems/: Channel.cpp  Channel.hpp  ChannelCanvas.cpp  ChannelCanvas.hpp  ClickBox.hpp  ComponentSprite.cpp  ComponentSprite.hpp  (+49 more)
test/: CMakeLists.txt  main.cpp  readme.md
test/Aerodynamics/: AeroTests.cpp
test/BouyantForces/: BallonetUnitTest.cpp  BuoyantForcesUnitTest.cpp  ComponentUnitTest.cpp  GasCellUnitTest.cpp
test/External-Reactions/: ExternalReactionsSubsystemTest.cpp
test/GeneralInformation/: GeneralInfoLoadTest.cpp  GeneralInfoSaveTest.cpp  GeneralInfoSubsystemTest.cpp  GeneralInfoValidationTest.cpp
test/Mass-Balance/: CMakeCache.txt  CMakeLists.txt  EmptyMassTest  EmptyMassTest.cpp  EmptymassTest.cpp  Emptymass_Boost_test.cpp  LocationTest  LocationTest.cpp  Makefile  MomentOfInertiaTest.cpp  PointMassTest.cpp  cmake_install.cmake  test_MomentOfInertia
test/Metrics/: MetricsUnitTest.cpp
test/TestFiles/: book.xml
test/XML/: XMLNodeTest.cpp
tools/: Linux-Get-Dependencies.sh  Linux-x64-Clang-Debug.sh  Linux-x64-Clang-Release.sh  Linux-x64-GCC-Debug.sh  Linux-x64-GCC-Release.sh  MacOS-Arm64-Clang-Debug.sh  MacOS-Arm64-Clang-Release.sh  MacOS-Get-Dependencies.sh  Windows-x64-Clang-Debug.bat  Windows-x64-Clang-Release.bat  Windows-x64-Debug.bat  Windows-x64-Release.bat
(+69 files in other folders)
